docs: add Newton 1982

--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -151,6 +151,17 @@
   lccn = {QC721 .M298}
 }
 
+@book{newtonScatteringTheoryWaves1982,
+  title = {Scattering {{Theory}} of {{Waves}} and {{Particles}}},
+  author = {Newton, Roger G.},
+  year = {1982},
+  edition = {2nd edition},
+  publisher = {{Springer}},
+  address = {{New York}},
+  annotation = {OCLC: 721001374},
+  isbn = {978-3-540-10950-1}
+}
+
 @article{petersPrimerPartialWave2004,
   title = {A {{Primer}} on {{Partial Wave Analysis}}},
   author = {Peters, Klaus},
