docs: add Leader 1982

--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -129,6 +129,18 @@
   url = {https://home.fnal.gov/~kutschke/Angdist/angdist.ps}
 }
 
+@book{leaderSpinParticlePhysics2001,
+  title = {Spin in Particle Physics},
+  author = {Leader, Elliot},
+  year = {2001},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge ; New York}},
+  isbn = {978-0-521-35281-9},
+  lccn = {QC793.3.S6 L43 2001},
+  number = {15},
+  series = {Cambridge Monographs on Particle Physics, Nuclear Physics, and Cosmology}
+}
+
 @article{marangottoHelicityAmplitudesGeneric2020,
   title = {Helicity Amplitudes for Generic Multi-Body Particle Decays Featuring Multiple Decay Chains},
   author = {Marangotto, Daniele},
