--- a/docs/theory/introduction.ipynb
+++ b/docs/theory/introduction.ipynb
@@ -99,61 +99,41 @@
    "source": [
     ":::{dropdown} The old text\n",
     "\n",
-    "In general one is interested in gaining knowledge about the interaction of\n",
-    "particles. Therefore, particle reaction experiments are performed to validate\n",
-    "theoretical models and extract physical quantities and information (based on\n",
-    "those models). To validate and extract information a comparison of the data\n",
-    "from the experiment and the theoretical model is needed.\n",
+    "In general one is interested in gaining knowledge about the interaction of particles. Therefore, particle reaction experiments are performed to validate theoretical models and extract physical quantities and  information (based on those models). To validate and extract information a comparison of the data from the experiment and the theoretical model is needed.\n",
     "\n",
-    "The probability amplitude {cite}`weinbergQuantumTheoryFields1995`, p.113 of an\n",
-    "initial state $Psi_i$ going to a final state $Psi_f$ is:\n",
+    "The probability amplitude {cite}`weinbergQuantumTheoryFields1995`, p.113 of an initial state $\\Psi_i$ going to a final state $\\Psi_f$ is:\n",
     "\n",
-    "```{math}\n",
+    "$$\n",
+    "S_{fi} = \\left< \\Psi_f \\middle| S \\middle| \\Psi_i \\right> = -2\\pi i \\delta^4(p_i - p_f)M_{fi}.\n",
+    "$$\n",
     "\n",
-    "S_{fi} = \\left< \\Psi_f \\middle| S \\middle| \\Psi_i \\right> = -2\\pi i\n",
-    "\\delta^4(p_i - p_f)M_{fi}.\n",
+    "This is a general formula, so the particle content of the initial and final state is arbitrary.\n",
     "\n",
-    "```\n",
-    "\n",
-    "This is a general formula, so the particle content of the initial and final\n",
-    "state is arbitrary.\n",
-    "\n",
-    "Experimental physicists measure transition rates or cross sections instead of\n",
-    "the transition probability. There are two special cases of initial states,\n",
-    "since many experimental measurements fall under these two categories:\n",
+    "Experimental physicists measure transition rates or cross sections instead of the transition probability. There are two special cases of initial states, since many experimental measurements fall under these two categories:\n",
     "\n",
     "1. Single particles in the initial state ($N_I=1$)\n",
     "\n",
-    "   This is a single particle decaying into the final state particles. Here the\n",
-    "   decay rate {cite}`weinbergQuantumTheoryFields1995`, p.136 is\n",
+    "   This is a single particle decaying into the final state particles. Here the decay rate {cite}`weinbergQuantumTheoryFields1995`, p.136 is\n",
     "\n",
-    "   ```{math}\n",
-    "\n",
+    "   $$\n",
     "   d\\Gamma(i \\rightarrow f) = 2\\pi |M_{fi}|^2 \\delta^4(p_f - p_i) d\\Phi_f\n",
+    "   $$\n",
     "\n",
-    "   ```\n",
-    "\n",
-    "   $dPhi_f$ is the phase space element of the final state, which is needed to\n",
-    "   make a comparison with data. More on this below.\n",
+    "   with $d\\Phi_f$ is the phase space element of the final state, which is needed to make a comparison with data. More on this below.\n",
     "\n",
     "2. Two particles in the initial state ($N_I=2$)\n",
     "\n",
-    "   The cross section of a two particle scattering/production process\n",
-    "   {cite}`weinbergQuantumTheoryFields1995`, p.137 is\n",
+    "   The cross section of a two particle scattering/production process {cite}`weinbergQuantumTheoryFields1995`, p.137 is\n",
     "\n",
-    "   d\\sigma(i \\rightarrow f) = (2\\pi)^4 u*i^{-1} |M*{fi}|^2 \\delta^4(p_f - p_i)\n",
-    "   d\\Phi_f with $u_i^{-1}$ the relative velocity of the initial state\n",
-    "   particles.\n",
+    "   $$\n",
+    "   d\\sigma(i \\rightarrow f) = (2\\pi)^4 u*i^{-1} |M*{fi}|^2 \\delta^4(p_f - p_i) d\\Phi_f\n",
+    "   $$\n",
+    "   \n",
+    "   with $u_i^{-1}$ the relative velocity of the initial state particles.\n",
     "\n",
-    "Describing multi body problems (more than 2) is a difficult task, since the\n",
-    "interaction of more than two particles is difficult to describe\n",
-    "{cite}`weinbergQuantumTheoryFields1995`, ch.4.\n",
+    "Describing multi body problems (more than 2) is a difficult task, since the interaction of more than two particles is difficult to describe {cite}`weinbergQuantumTheoryFields1995`, ch.4.\n",
     "\n",
-    "One can resort to a simplification to treat a many body interaction by\n",
-    "successive two body interactions. For N body particle decays (N > 2) this is\n",
-    "known as the isobar model. Here a particle into N final state particles is\n",
-    "modelled by a sequence of two particle decays. This is also also a assumption\n",
-    "of the helicity/canonical formalism.\n",
+    "One can resort to a simplification to treat a many body interaction by successive two body interactions. For N body particle decays (N > 2) this is known as the isobar model. Here a particle into N final state particles is modelled by a sequence of two particle decays. This is also also a assumption of the helicity/canonical formalism.\n",
     "\n",
     ":::"
    ]
