docs: comment out old text

--- a/docs/theory/introduction.ipynb
+++ b/docs/theory/introduction.ipynb
@@ -97,9 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{dropdown} The old text\n",
-    "\n",
-    "In general one is interested in gaining knowledge about the interaction of particles. Therefore, particle reaction experiments are performed to validate theoretical models and extract physical quantities and  information (based on those models). To validate and extract information a comparison of the data from the experiment and the theoretical model is needed.\n",
+    "<!-- In general one is interested in gaining knowledge about the interaction of particles. Therefore, particle reaction experiments are performed to validate theoretical models and extract physical quantities and  information (based on those models). To validate and extract information a comparison of the data from the experiment and the theoretical model is needed.\n",
     "\n",
     "The probability amplitude {cite}`weinbergQuantumTheoryFields1995`, p.113 of an initial state $\\Psi_i$ going to a final state $\\Psi_f$ is:\n",
     "\n",
@@ -133,9 +131,7 @@
     "\n",
     "Describing multi body problems (more than 2) is a difficult task, since the interaction of more than two particles is difficult to describe {cite}`weinbergQuantumTheoryFields1995`, ch.4.\n",
     "\n",
-    "One can resort to a simplification to treat a many body interaction by successive two body interactions. For N body particle decays (N > 2) this is known as the isobar model. Here a particle into N final state particles is modelled by a sequence of two particle decays. This is also also a assumption of the helicity/canonical formalism.\n",
-    "\n",
-    ":::"
+    "One can resort to a simplification to treat a many body interaction by successive two body interactions. For N body particle decays (N > 2) this is known as the isobar model. Here a particle into N final state particles is modelled by a sequence of two particle decays. This is also also a assumption of the helicity/canonical formalism. -->"
    ]
   },
   {
