docs: add Anisovich and Zemach papers

--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -43,6 +43,20 @@
   series = {Lecture {{Notes}} in {{Physics}}}
 }
 
+@article{anisovichMomentoperatorExpansionTwomeson2002,
+  title = {Moment-Operator Expansion for the Two-Meson, Two-Photon and Fermion–Antifermion States},
+  author = {Anisovich, A V and Anisovich, V V and Markov, V N and Matveev, M A and Sarantsev, A V},
+  year = {2002},
+  month = jan,
+  volume = {28},
+  pages = {15--32},
+  issn = {0954-3899, 1361-6471},
+  doi = {10.1088/0954-3899/28/1/302},
+  url = {http://stacks.iop.org/0954-3899/28/i=1/a=302?key=crossref.2da315974788d3ab6f79427c3029f7fb},
+  journal = {Journal of Physics G: Nuclear and Particle Physics},
+  number = {1}
+}
+
 @incollection{asnerDalitzPlotAnalysis2006,
   title = {Dalitz {{Plot Analysis Formalism}}},
   booktitle = {Review of {{Particle Physics}}: {{Volume I Reviews}}},
@@ -246,6 +260,20 @@
   address = {{Cambridge ; New York}},
   isbn = {978-0-521-55001-7},
   lccn = {QC174.45 .W45 1995}
+}
+
+@article{zemachUseAngularMomentumTensors1965,
+  title = {Use of {{Angular}}-{{Momentum Tensors}}},
+  author = {Zemach, Charles},
+  year = {1965},
+  month = oct,
+  volume = {140},
+  pages = {B97-B108},
+  issn = {0031-899X},
+  doi = {10.1103/PhysRev.140.B97},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.140.B97},
+  journal = {Physical Review},
+  number = {1B}
 }
 
 
