docs: add Mandelstam variable definitions

--- a/docs/theory/introduction.ipynb
+++ b/docs/theory/introduction.ipynb
@@ -41,27 +41,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the {term}`Standard Model` provides an incredibly accurate description of\n",
-    "the most fundamental constituents of matter, it remains difficult to describe\n",
-    "interactions at the level of bound states ({term}`hadrons <hadron>`). This is\n",
-    "because the fundamental force that dominates at this range―the\n",
-    "{term}`strong force`—is characterized by an {term}`asymptotic freedom`: it has\n",
-    "a strong coupling constant at low momentum transfer.\n",
+    "While the {term}`Standard Model` provides an incredibly accurate description of the most fundamental constituents of matter, it remains difficult to describe interactions at the level of bound states ({term}`hadrons <hadron>`). This is because the fundamental force that dominates at this range---―the {term}`strong force`---is characterized by an {term}`asymptotic freedom`: it has a strong coupling constant at low momentum transfer.\n",
     "\n",
-    "One the one hand, this asymptotic behavior of the strong force forces\n",
-    "{term}`quarks <quark>` to bound together in colorless groups\n",
-    "({term}`color confinement`), giving particle physicists an amazingly varied\n",
-    "spectrum of quark combinations to study. On the other, the asymptotic running\n",
-    "of the coupling constant makes it almost impossible to predict from first\n",
-    "principles how bound states of quarks interact at lower energies.\n",
+    "One the one hand, this asymptotic behavior of the strong force forces {term}`quarks <quark>` to bound together in colorless groups ({term}`color confinement`), giving particle physicists an amazingly varied spectrum of quark combinations to study. On the other, the asymptotic running of the coupling constant makes it almost impossible to predict from first principles how bound states of quarks interact at lower energies.\n",
     "\n",
-    "Theoreticians have developed several descriptive models and numerical tools\n",
-    "({term}`lattice QCD` most importantly), but these models often rest on several\n",
-    "assumptions or fail to describe larger systems. It therefore remains important\n",
-    "to study particle interactions at the lower energies.\n",
+    "Theoreticians have developed several descriptive models and numerical tools ({term}`lattice QCD` most importantly), but these models often rest on several assumptions or fail to describe larger systems. It therefore remains important to study particle interactions at the lower energies.\n",
     "\n",
-    "Partial Wave Analysis is a collection of techniques that allows us to perform\n",
-    "these studies.\n",
+    "Partial Wave Analysis is a collection of techniques that allows us to perform these studies.\n",
     "\n",
     "- Importance of decomposing interactions\n",
     "- Strong QCD coupling constant at low momentum transfer\n",
@@ -88,6 +74,8 @@
    "metadata": {},
    "source": [
     "- Amplitudes and intensities\n",
+    "  - Test 1\n",
+    "  - Test 2\n",
     "- Scattering operator $S$ ({term}`S-matrix`)\n",
     "- Lead-up to $T$-matrix ({term}`transition operator`)\n",
     "- Distinction dynamical part and angular part"
@@ -239,8 +227,9 @@
     "v_p2.text(\"$p_2$\", x=-0.06, y=0)\n",
     "v_p3.text(\"$p_3$\", x=+0.06, y=0)\n",
     "v_p4.text(\"$p_4$\", x=+0.06, y=0)\n",
-    "s_channel.text(0.5, 0, \"$s$-channel\", fontsize=15)\n",
-    "s_channel.plot();\n",
+    "s_channel.text(0.5, 0.08, \"$s$-channel\", fontsize=15)\n",
+    "s_channel.text(0.5, 0, \"$s = (p_1 + p_2)^2 = (p_3 + p_4)^2$\", fontsize=12)\n",
+    "s_channel.plot()\n",
     "\n",
     "t_channel = Diagram(ax[1])\n",
     "# Vertices\n",
@@ -261,8 +250,9 @@
     "v_p2.text(\"$p_2$\", x=-0.06, y=0)\n",
     "v_p3.text(\"$p_3$\", x=+0.06, y=0)\n",
     "v_p4.text(\"$p_4$\", x=+0.06, y=0)\n",
-    "t_channel.text(0.5, 0, \"$t$-channel\", fontsize=15)\n",
-    "t_channel.plot();\n",
+    "t_channel.text(0.5, 0.08, \"$t$-channel\", fontsize=15)\n",
+    "t_channel.text(0.5, 0, \"$t = (p_1 - p_3)^2 = (p_4 - p_2)^2$\", fontsize=12)\n",
+    "t_channel.plot()\n",
     "\n",
     "u_channel = Diagram(ax[2])\n",
     "# Vertices\n",
@@ -283,7 +273,8 @@
     "v_p2.text(\"$p_2$\", x=-0.06, y=0)\n",
     "v_p3.text(\"$p_3$\", x=+0.06, y=0)\n",
     "v_p4.text(\"$p_4$\", x=+0.06, y=0)\n",
-    "u_channel.text(0.5, 0, \"$u$-channel\", fontsize=15)\n",
+    "u_channel.text(0.5, 0.08, \"$u$-channel\", fontsize=15)\n",
+    "u_channel.text(0.5, 0, \"$u = (p_1 - p_4)^2 = (p_3 - p_2)^2$\", fontsize=12)\n",
     "u_channel.plot();"
    ]
   }
