docs: add Badalyan 1982 on coupled channels

--- a/docs/bibliography-Theory.bib
+++ b/docs/bibliography-Theory.bib
@@ -66,6 +66,20 @@
   url = {https://pdg.lbl.gov/2010/reviews/rpp2010-rev-dalitz-analysis-formalism.pdf}
 }
 
+@article{badalyanResonancesCoupledChannels1982,
+  title = {Resonances in Coupled Channels in Nuclear and Particle Physics},
+  author = {Badalyan, A.M. and Kok, L.P. and Polikarpov, M.I. and Simonov, Yu.A.},
+  year = {1982},
+  month = feb,
+  volume = {82},
+  pages = {31--177},
+  issn = {03701573},
+  doi = {10.1016/0370-1573(82)90014-X},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/037015738290014X},
+  journal = {Physics Reports},
+  number = {2}
+}
+
 @article{chenCoherentHelicityAmplitude2017,
   title = {Coherent Helicity Amplitude for Sequential Decays},
   author = {Chen, Hong and Ping, Rong-Gang},
