refactor!: merge theory into main page

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since {term}`scattering operator` ($S$-matrix) formulates the transition amplitude from initial state $\\left|i\\right>$ to final state $\\left|f\\right>$ through $\\left<i\\right|S\\left|f\\right>$, it is a **unitary** operator—probability is conserved, meaning $SS^* = I$. Now, {ref}`having defined the transition operator <theory/introduction:Transition amplitude>` through $S = I + iT$, we can introduce another operator: $K^{-1} = T^{-1} + iI$ {cite}`chungPartialWaveAnalysis1995`. \n",
+    "Since {term}`scattering operator` ($S$-matrix) formulates the transition amplitude from initial state $\\left|i\\right>$ to final state $\\left|f\\right>$ through $\\left<i\\right|S\\left|f\\right>$, it is a **unitary** operator—probability is conserved, meaning $SS^* = I$. Now, {ref}`having defined the transition operator <introduction:Transition amplitude>` through $S = I + iT$, we can introduce another operator: $K^{-1} = T^{-1} + iI$ {cite}`chungPartialWaveAnalysis1995`. \n",
     "  \n"
    ]
   },
