feat: add anchor for Mandelstam variables

--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -182,6 +182,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(mandelstam-variables)=\n",
+    "\n",
     "### Mandelstam variables"
    ]
   },
