--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -18,7 +18,10 @@
    "source": [
     "%%capture\n",
     "%config Completer.use_jedi = False\n",
-    "%config InlineBackend.figure_formats = ['svg']"
+    "%config InlineBackend.figure_formats = ['svg']\n",
+    "import os\n",
+    "\n",
+    "STATIC_WEB_PAGE = {\"EXECUTE_NB\", \"READTHEDOCS\"}.intersection(os.environ)"
    ]
   },
   {
