--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $K$-matrix"
+    "## K-matrix"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Special cases of the $K$-matrix"
+    "## Special cases of the K-matrix"
    ]
   },
   {
