docs: wrap WIP text in to-do blocks

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "source": [
     "```{todo}\n",
-    "Explain why this new matrix interesting?\n",
+    "Explain why this new matrix interesting\n",
     "```"
    ]
   },
