--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -53,12 +53,21 @@
     "\n",
     "Theoreticians have developed several descriptive models and numerical tools ({term}`lattice QCD` most importantly), but these models often rest on several assumptions or fail to describe larger systems. It therefore remains important to study particle interactions at the lower energies.\n",
     "\n",
-    "Partial Wave Analysis is a collection of techniques that allows us to perform these studies.\n",
+    "Partial Wave Analysis is a collection of techniques that allows us to perform these studies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{todo}\n",
     "\n",
     "- Importance of decomposing interactions\n",
     "- Strong QCD coupling constant at low momentum transfer\n",
     "- Cannot compute intermediate states from theory\n",
-    "- Need to collect properties: mass, width, spin, parity"
+    "- Need to collect properties: mass, width, spin, parity\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -79,12 +88,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{todo}\n",
+    "\n",
     "- Amplitudes and intensities\n",
-    "  - Test 1\n",
-    "  - Test 2\n",
     "- Scattering operator $S$ ({term}`S-matrix`)\n",
     "- Lead-up to $T$-matrix ({term}`transition operator`)\n",
-    "- Distinction dynamical part and angular part"
+    "- Distinction dynamical part and angular part\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -139,6 +150,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{todo}\n",
+    ":class: dropdown\n",
+    "\n",
     "Decomposition into partial waves {cite}`petersPrimerPartialWave2004`, p.3:\n",
     "\n",
     "> Consider an incident wave $\\left|i\\right> = Psi_i$. In an experimental\n",
@@ -170,11 +184,22 @@
     "> In PWA, it is therefore common to distinguish these wave contributions as\n",
     "> $S$-wave, $P$-wave, etc.\n",
     "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{todo}\n",
+    "\n",
     "- Separating out angular and radial wave functions using Legendre polynomials\n",
     "- What we can see from this and how it relates to analysis techniques\n",
     "- (?) Difference with amplitude analysis\n",
     "- Possible initial states: 1, 2, and multi-body\n",
-    "- Suitable for propagation, not re-scattering"
+    "- Suitable for propagation, not re-scattering\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -289,7 +314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
