docs: wrap unfinished sections in to-do blocks (#103)
* docs: remove LaTeX math mode in headers
* docs: extend bibtex of existing references
* docs: link to other PWA packages
* docs: reorganize software page

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $K$-matrix"
+    "## K-matrix"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "source": [
     "```{todo}\n",
-    "Explain why this new matrix interesting?\n",
+    "Explain why this new matrix interesting\n",
     "```"
    ]
   },
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Special cases of the $K$-matrix"
+    "## Special cases of the K-matrix"
    ]
   },
   {
