style: use more MyST column fences

--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the {term}`Standard Model` provides an incredibly accurate description of the most fundamental constituents of matter, it remains difficult to describe interactions at the level of bound states ({term}`hadrons <hadron>`). This is because the fundamental force that dominates at this range---―the {term}`strong force`---is characterized by an {term}`asymptotic freedom`: it has a strong coupling constant at low momentum transfer.\n",
+    "While the {term}`Standard Model` provides an incredibly accurate description of the most fundamental constituents of matter, it remains difficult to describe interactions at the level of bound states ({term}`hadrons <hadron>`). This is because the fundamental force that dominates at this range―the {term}`strong force`―is characterized by an {term}`asymptotic freedom`: it has a strong coupling constant at low momentum transfer.\n",
     "\n",
     "One the one hand, this asymptotic behavior of the strong force forces {term}`quarks <quark>` to bound together in colorless groups ({term}`color confinement`), giving particle physicists an amazingly varied spectrum of quark combinations to study. On the other, the asymptotic running of the coupling constant makes it almost impossible to predict from first principles how bound states of quarks interact at lower energies.\n",
     "\n",
