docs: improve pole title

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What's the difference between Poles and Resonances?"
+    "## Difference between resonances and bound states?"
    ]
   }
  ],
