--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -54,26 +54,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is a list of software frameworks or projects for amplitude analysis:\n",
+    "Here is a list of software frameworks or projects for amplitude analysis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "from IPython.display import HTML\n",
+    "from pytablewriter import HtmlTableWriter\n",
     "\n",
-    "<!-- cspell:ignore amplitf gpupwa rootpwa -->\n",
+    "inventory_path = \"framework-inventory.yml\"\n",
+    "with open(f\"./software/{inventory_path}\") as stream:\n",
+    "    inventory = yaml.load(stream, Loader=yaml.SafeLoader)\n",
+    "frameworks = inventory[\"pwa-frameworks\"]\n",
+    "collaborations = inventory[\"collaborations\"]\n",
     "\n",
-    "- [AmpGen](https://github.com/GooFit/AmpGen/blob/master/README.md)\n",
-    "- [AmpTools](https://github.com/mashephe/AmpTools)\n",
-    "- [ComPWA project](https://compwa-org.readthedocs.io/en/stable/about.html):\n",
-    "  - [QRules](https://qrules.readthedocs.io)\n",
-    "  - [AmpForm](https://ampform.readthedocs.io)\n",
-    "  - [TensorWaves](https://tensorwaves.readthedocs.io)\n",
-    "- [GPUPWA](https://sourceforge.net/projects/gpupwa) ([BESIII](http://bes3.ihep.ac.cn))\n",
-    "- [Laura++](https://doi.org/10.1016/j.cpc.2018.04.017) ([LHCb](https://lhcb.web.cern.ch))\n",
-    "- [Pawian](https://panda-wiki.gsi.de/foswiki/bin/view/PWA/PawianPwaSoftware) ([RUB](https://www.ruhr-uni-bochum.de/) for [PANDA](https://panda.gsi.de) / [BESIII](http://bes3.ihep.ac.cn))\n",
-    "- [PyPWA](https://pypwa.jlab.org) ([JLab](https://www.jlab.org))\n",
-    "- [ROOTPWA](https://github.com/ROOTPWA-Maintainers/ROOTPWA) ([COMPASS](https://home.cern/science/experiments/compass))\n",
-    "- [TensorFlowAnalysis](https://gitlab.cern.ch/poluekt/TensorFlowAnalysis) ([LHCb](https://lhcb.web.cern.ch))\n",
-    "  - [AmpliTF](https://github.com/apoluekt/AmpliTF)\n",
-    "  - [TFA2](https://github.com/apoluekt/TFA2)\n",
-    "- [TF-PWA](https://tf-pwa.rtfd.io) ([BESIII](http://bes3.ihep.ac.cn) / [LHCb](https://lhcb.web.cern.ch))\n",
     "\n",
+    "def format_project(definition: dict) -> str:\n",
+    "    project = form_link(definition)\n",
+    "    sub_project_list = definition.get(\"sub-projects\")\n",
+    "    if sub_project_list is not None:\n",
+    "        sub_projects = \"<li>\".join(map(form_link, sub_project_list))\n",
+    "        sub_projects = \"<li>\" + sub_projects\n",
+    "        project += sub_projects\n",
+    "    return project\n",
+    "\n",
+    "\n",
+    "def format_collaboration(definition: dict) -> str:\n",
+    "    collaboration = definition.get(\"collaboration\", \"\")\n",
+    "    if collaboration:\n",
+    "        if isinstance(collaboration, str):\n",
+    "            collaboration = [collaboration]\n",
+    "        collaboration = \" / \".join(map(form_collaboration_link, collaboration))\n",
+    "    return collaboration\n",
+    "\n",
+    "\n",
+    "def form_collaboration_link(name: str) -> str:\n",
+    "    collaboration_url = collaborations.get(name)\n",
+    "    if collaboration_url is None:\n",
+    "        raise KeyError(\n",
+    "            f'Collaboration definition \"{name}\" not found in {inventory_path}'\n",
+    "        )\n",
+    "    return form_link(dict(name=name, url=collaboration_url))\n",
+    "\n",
+    "\n",
+    "def form_link(definition: dict) -> str:\n",
+    "    name = definition[\"name\"]\n",
+    "    url = definition[\"url\"]\n",
+    "    return f'<a href=\"{url}\">{name}</a>'\n",
+    "\n",
+    "\n",
+    "writer = HtmlTableWriter(\n",
+    "    headers=[\"Project\", \"Collaboration\"],\n",
+    "    value_matrix=[\n",
+    "        (\n",
+    "            format_project(entry),\n",
+    "            format_collaboration(entry),\n",
+    "        )\n",
+    "        for entry in frameworks\n",
+    "    ],\n",
+    ")\n",
+    "src = writer.dumps()\n",
+    "left_align_style = 'style=\"text-align:left; vertical-align:top\"'\n",
+    "src = src.replace('align=\"left\"', left_align_style)\n",
+    "src = src.replace(\"<th>\", f\"<th {left_align_style}>\")\n",
+    "HTML(src)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Please [let us know](https://github.com/ComPWA/PWA-pages/issues/new?title=Missing%20PWA%20package) if you have other recommendations!"
    ]
   },
