docs: add languages to framework inventory

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -70,6 +70,8 @@
    },
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "import yaml\n",
     "from IPython.display import HTML\n",
     "from pytablewriter import HtmlTableWriter\n",
@@ -81,18 +83,18 @@
     "collaborations = inventory[\"collaborations\"]\n",
     "\n",
     "\n",
-    "def format_project(definition: dict) -> str:\n",
-    "    project = form_link(definition)\n",
-    "    sub_project_list = definition.get(\"sub-projects\")\n",
+    "def format_project(entry: dict) -> str:\n",
+    "    project = form_link(entry)\n",
+    "    sub_project_list = entry.get(\"sub-projects\")\n",
     "    if sub_project_list is not None:\n",
-    "        sub_projects = \"<li>\".join(map(form_link, sub_project_list))\n",
-    "        sub_projects = \"<li>\" + sub_projects\n",
+    "        sub_project_list = list(map(form_link, sub_project_list))\n",
+    "        sub_projects = form_html_list(sub_project_list)\n",
     "        project += sub_projects\n",
     "    return project\n",
     "\n",
     "\n",
-    "def format_collaboration(definition: dict) -> str:\n",
-    "    collaboration = definition.get(\"collaboration\", \"\")\n",
+    "def format_collaboration(entry: dict) -> str:\n",
+    "    collaboration = entry.get(\"collaboration\", \"\")\n",
     "    if collaboration:\n",
     "        if isinstance(collaboration, str):\n",
     "            collaboration = [collaboration]\n",
@@ -100,33 +102,57 @@
     "    return collaboration\n",
     "\n",
     "\n",
+    "def format_language(entry: dict, language: str) -> str:\n",
+    "    languages = entry.get(\"language\", [])\n",
+    "    languages = set(map(lambda s: s.lower(), languages))\n",
+    "    if language.lower() in languages:\n",
+    "        return \"✓\"\n",
+    "    return \"\"\n",
+    "\n",
+    "\n",
     "def form_collaboration_link(name: str) -> str:\n",
     "    collaboration_url = collaborations.get(name)\n",
     "    if collaboration_url is None:\n",
     "        raise KeyError(\n",
-    "            f'Collaboration definition \"{name}\" not found in {inventory_path}'\n",
+    "            f'Collaboration entry \"{name}\" not found in {inventory_path}'\n",
     "        )\n",
     "    return form_link(dict(name=name, url=collaboration_url))\n",
     "\n",
     "\n",
-    "def form_link(definition: dict) -> str:\n",
-    "    name = definition[\"name\"]\n",
-    "    url = definition[\"url\"]\n",
+    "def form_html_list(entry: List[str]) -> str:\n",
+    "    if not entry:\n",
+    "        return \"\"\n",
+    "    if len(entry) == 1:\n",
+    "        return entry[0]\n",
+    "    html = \"<li>\".join(entry)\n",
+    "    html = \"<li>\" + html\n",
+    "    return html\n",
+    "\n",
+    "\n",
+    "def form_link(entry: dict) -> str:\n",
+    "    name = entry[\"name\"]\n",
+    "    url = entry[\"url\"]\n",
     "    return f'<a href=\"{url}\">{name}</a>'\n",
     "\n",
     "\n",
     "writer = HtmlTableWriter(\n",
-    "    headers=[\"Project\", \"Collaboration\"],\n",
+    "    headers=[\"Project\", \"Collaboration\", \"C++\", \"Python\"],\n",
     "    value_matrix=[\n",
     "        (\n",
     "            format_project(entry),\n",
     "            format_collaboration(entry),\n",
+    "            format_language(entry, \"C++\"),\n",
+    "            format_language(entry, \"Python\"),\n",
     "        )\n",
     "        for entry in frameworks\n",
     "    ],\n",
     ")\n",
     "src = writer.dumps()\n",
     "left_align_style = 'style=\"text-align:left; vertical-align:top\"'\n",
+    "center_align_style = 'style=\"text-align:center; vertical-align:top\"'\n",
+    "src = src.replace(\n",
+    "    '<td align=\"left\">✓</td>', f\"<td {center_align_style}>✓</td>\"\n",
+    ")\n",
     "src = src.replace('align=\"left\"', left_align_style)\n",
     "src = src.replace(\"<th>\", f\"<th {left_align_style}>\")\n",
     "HTML(src)"
