ci: add linting for Python source code
* chore: apply pyupgrade
* chore: fix linting issues flake8, mypy, pylint, pyright

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "from sympy import symbols\n",
-    "from sympy.plotting import plot, plot_parametric\n",
+    "from sympy.plotting import plot\n",
     "\n",
     "x, Gamma, E0 = symbols(R\"x \\Gamma E_0\")\n",
     "gamma2_4 = Gamma ** 2 / 4\n",
