style: apply pyupgrade to dynamics notebook

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -204,12 +204,12 @@
     "from sympy import symbols\n",
     "from sympy.plotting import plot, plot_parametric\n",
     "\n",
-    "x, Gamma, E0 = symbols(\"x \\Gamma E_0\")\n",
+    "x, Gamma, E0 = symbols(R\"x \\Gamma E_0\")\n",
     "gamma2_4 = Gamma ** 2 / 4\n",
     "breit_wigner = gamma2_4 / ((x - E0) ** 2 + gamma2_4)\n",
     "\n",
     "plot(\n",
-    "    breit_wigner.subs({\"\\Gamma\": 0.25, \"E_0\": 0.75}),\n",
+    "    breit_wigner.subs({R\"\\Gamma\": 0.25, \"E_0\": 0.75}),\n",
     "    xlim=(0, 1.5),\n",
     "    title=\"Non-relativistic Breit-Wigner\",\n",
     "    xlabel=\"$E$ (A.U.)\",\n",
