docs: list CUDA as language

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -85,6 +85,7 @@
     "    selected_languages=[\n",
     "        \"C++\",\n",
     "        \"Python\",\n",
+    "        \"Cuda\",\n",
     "    ],\n",
     "    fetch_languages=True,\n",
     ")\n",
