feat: add last commit date to table

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -97,6 +97,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "_Last updated: {{ build_date }}_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Software development"
    ]
   },
