docs: list general fitter packages

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -47,14 +47,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inventory of PWA projects"
+    "## Software inventory"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is a list of software frameworks or projects for amplitude analysis. Suggestions or fixes can easily be added through [this YAML file](https://github.com/ComPWA/PWA-pages/blob/main/docs/software/framework-inventory.yml) (click [here](https://github.com/ComPWA/PWA-pages/edit/main/docs/software/framework-inventory.yml) to edit)."
+    ":::{rubric} Amplitude analysis projects\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "The following frameworks or projects are specifically designed to do amplitude analysis. The table is built from [this YAML file](https://github.com/ComPWA/PWA-pages/blob/main/docs/software/amplitude-analysis-projects.yml) and can be updated [here](https://github.com/ComPWA/PWA-pages/edit/main/docs/software/amplitude-analysis-projects.yml)."
    ]
   },
   {
@@ -79,7 +83,7 @@
     "    to_html_table,\n",
     ")\n",
     "\n",
-    "inventory_dict = load_yaml(\"software/framework-inventory.yml\")\n",
+    "inventory_dict = load_yaml(\"software/amplitude-analysis-projects.yml\")\n",
     "html_src = to_html_table(\n",
     "    inventory=ProjectInventory(**inventory_dict),\n",
     "    selected_languages=[\n",
@@ -97,8 +101,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{rubric} General fitter packages\n",
     "\n",
-    "_Last updated: {{ build_date }}_"
+    ":::\n",
+    "\n",
+    "The following packages do not have functionality for amplitude building, but can do fits with high performance. The YAML database for this table can be updated [here](https://github.com/ComPWA/PWA-pages/blob/main/docs/software/fitter-packages.yml)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "inventory_dict = load_yaml(\"software/fitter-packages.yml\")\n",
+    "html_src = to_html_table(\n",
+    "    inventory=ProjectInventory(**inventory_dict),\n",
+    "    selected_languages=[\n",
+    "        \"C++\",\n",
+    "        \"Python\",\n",
+    "        \"Cuda\",\n",
+    "    ],\n",
+    "    fetch=True,\n",
+    "    hide_columns=[\"Collaboration\"],\n",
+    ")\n",
+    "html_src = fix_html_alignment(html_src)\n",
+    "HTML(html_src)"
    ]
   },
   {
@@ -117,6 +152,13 @@
     "Have a look at [scikit-hep.org/developer](https://scikit-hep.org/developer) and [Towards a HEP Software Training curriculum](https://hepsoftwarefoundation.org/training/curriculum.html)! For development instructions for the ComPWA organization, see [Help developing](https://compwa-org.readthedocs.io/en/stable/develop.html).\n",
     "\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Last update: {{ build_date }}_"
    ]
   }
  ],
