fix: change fetch_languages into general fetch option

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -87,7 +87,7 @@
     "        \"Python\",\n",
     "        \"Cuda\",\n",
     "    ],\n",
-    "    fetch_languages=True,\n",
+    "    fetch=True,\n",
     ")\n",
     "html_src = fix_html_alignment(html_src)\n",
     "HTML(html_src)"
