fix: remove IPython from source code

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -70,10 +70,12 @@
    },
    "outputs": [],
    "source": [
+    "from IPython.display import HTML\n",
+    "\n",
     "from pwa_pages.project_inventory import (\n",
     "    ProjectInventory,\n",
+    "    fix_html_alignment,\n",
     "    load_yaml,\n",
-    "    render_html_table,\n",
     "    to_html_table,\n",
     ")\n",
     "\n",
@@ -85,7 +87,8 @@
     "        \"Python\",\n",
     "    ],\n",
     ")\n",
-    "render_html_table(html_src)"
+    "html_src = fix_html_alignment(html_src)\n",
+    "HTML(html_src)"
    ]
   },
   {
