feat: fetch languages in framework table from GitHub (#139)
* chore: remove redundant language listings
* docs: list CUDA as language

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is a list of software frameworks or projects for amplitude analysis:"
+    "Here is a list of software frameworks or projects for amplitude analysis. Suggestions or fixes can easily be added through [this YAML file](https://github.com/ComPWA/PWA-pages/blob/main/docs/software/framework-inventory.yml) (click [here](https://github.com/ComPWA/PWA-pages/edit/main/docs/software/framework-inventory.yml) to edit)."
    ]
   },
   {
@@ -85,17 +85,12 @@
     "    selected_languages=[\n",
     "        \"C++\",\n",
     "        \"Python\",\n",
+    "        \"Cuda\",\n",
     "    ],\n",
+    "    fetch_languages=True,\n",
     ")\n",
     "html_src = fix_html_alignment(html_src)\n",
     "HTML(html_src)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Other recommendations [can directly be added](https://github.com/ComPWA/PWA-pages/edit/main/docs/software/framework-inventory.yml) to [this YAML file](https://github.com/ComPWA/PWA-pages/blob/main/docs/software/framework-inventory.yml)."
    ]
   },
   {
