feat: fetch first and latest commit from repos (#140)
* feat: fetch first and last commit from GitHub repos
* docs: add "Latest commit" date to table
* docs: add "Since" column and field
* test: check only first language in repo

--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -87,10 +87,18 @@
     "        \"Python\",\n",
     "        \"Cuda\",\n",
     "    ],\n",
-    "    fetch_languages=True,\n",
+    "    fetch=True,\n",
     ")\n",
     "html_src = fix_html_alignment(html_src)\n",
     "HTML(html_src)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "_Last updated: {{ build_date }}_"
    ]
   },
   {
