--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -58,7 +58,10 @@
     "\n",
     ":::\n",
     "\n",
-    "The following frameworks or projects are specifically designed to do amplitude analysis. The table is built from [this YAML file](https://github.com/ComPWA/PWA-pages/blob/main/docs/software/amplitude-analysis-projects.yml) and can be updated [here](https://github.com/ComPWA/PWA-pages/edit/main/docs/software/amplitude-analysis-projects.yml)."
+    "The following frameworks or projects are specifically designed to do amplitude analysis. The table is built from\n",
+    "{{ '[this YAML file](https://github.com/ComPWA/PWA-pages/blob/{}/docs/software/amplitude-analysis-projects.yml)'.format(branch) }}\n",
+    "and can be updated\n",
+    "{{ '[here](https://github.com/ComPWA/PWA-pages/edit/{}/docs/software/amplitude-analysis-projects.yml)'.format(branch) }}."
    ]
   },
   {
@@ -105,7 +108,7 @@
     "\n",
     ":::\n",
     "\n",
-    "The following packages do not have functionality for amplitude building, but can do fits with high performance. The YAML database for this table can be updated [here](https://github.com/ComPWA/PWA-pages/blob/main/docs/software/fitter-packages.yml)."
+    "The following packages do not have functionality for amplitude building, but can do fits with high performance. The YAML database for this table can be updated {{ '[here](https://github.com/ComPWA/PWA-pages/edit/{}/docs/software/fitter-packages.yml)'.format(branch) }}."
    ]
   },
   {
