--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "```{warning}\n",
-    "These pages and are **under development**.\n",
+    "These pages are **under development**.\n",
     "```"
    ]
   },
