--- a/docs/software.ipynb
+++ b/docs/software.ipynb
@@ -19,12 +19,18 @@
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "%config Completer.use_jedi = False\n",
     "%config InlineBackend.figure_formats = ['svg']\n",
     "import os\n",
     "\n",
     "STATIC_WEB_PAGE = {\"EXECUTE_NB\", \"READTHEDOCS\"}.intersection(os.environ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{autolink-concat}\n",
+    "```"
    ]
   },
   {
