docs: automatically link code examples to API (#158)
* build: install jupyterlab-myst
* build: install sphinx-autocodelink
* ci: run RTD on Python 3.8
* ci: update pip constraints and pre-commit config
* ci: use black --preview flag
* docs: extend intersphinx mapping
* fix: limit Sphinx in Python 3.6 and 3.7
* fix: remove sphinx-math-dollar extension
* fix: update requirements cron job

Co-authored-by: GitHub <noreply@github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/docs/dynamics.ipynb
+++ b/docs/dynamics.ipynb
@@ -19,12 +19,18 @@
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "%config Completer.use_jedi = False\n",
     "%config InlineBackend.figure_formats = ['svg']\n",
     "import os\n",
     "\n",
     "STATIC_WEB_PAGE = {\"EXECUTE_NB\", \"READTHEDOCS\"}.intersection(os.environ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{autolink-concat}\n",
+    "```"
    ]
   },
   {
@@ -205,7 +211,7 @@
     "from sympy.plotting import plot\n",
     "\n",
     "x, Gamma, E0 = symbols(R\"x \\Gamma E_0\")\n",
-    "gamma2_4 = Gamma ** 2 / 4\n",
+    "gamma2_4 = Gamma**2 / 4\n",
     "breit_wigner = gamma2_4 / ((x - E0) ** 2 + gamma2_4)\n",
     "\n",
     "plot(\n",
