docs: add link to scattering theory resources

--- a/docs/introduction.ipynb
+++ b/docs/introduction.ipynb
@@ -87,6 +87,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{tip}\n",
+    "\n",
+    "An extensive, chronological lists of publications on scattering theory can be found [here](http://cgl.soic.indiana.edu/jpac/References.html).\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Transition amplitude"
    ]
   },
